--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,5 @@
+v0.0.8
+Save As was appending rather than overwriting .txt/.old
 v0.0.7
 Made how it converts files more future proof
 Made it a bit more lenient with file names
