--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,8 @@
-v0.1.2
+v0.1.3
 ...
+
+v0.1.2
+I seem to have borked something last update.
 
 v0.1.1
 Problem keeping treeview position on certain folders
